--- a/index.html
+++ b/index.html
@@ -2,32 +2,270 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Start</title>
+	<title>Resto</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<link rel="icon" href="favicon.png"/>
+	<link rel="icon" href="favicon.ico"/>
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/layout.css" />
+	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/style.css" />
+
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-</head>
-<body>
-	<header class="ba-header">
+		<![endif]-->
+	</head>
+	<body>
+		<header class="ba-header cf">
+			<div class="ba-container">
+				<a href="#" class="ba-logo ba-float-left">
+					<img src="/img/logo.png" alt="">
+				</a>
+				<nav class="ba-float-right">
+					<ul class="ba-menu">
+						<li><a href="#">Our Story</a></li>
+						<li><a href="#">Menu</a></li>
+						<li><a href="#">Reservations</a></li>
+						<li><a href="#">News</a></li>
+						<li><a href="#">Rviews</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main role="main" >
+			<section class="ba-banner">
 
-	</header>
-	<main role="main" >
+				<div class="ba-banner__content">
+					<h1 class="ba-banner__title">
+						This Template Is Awesome
+					</h1>
+					<p class="ba-banner__text">
+						resto restaurant home page website template
+					</p>
+				</div>
+			</section>
 
-	</main>
-	<footer class="ba-footer">
+			<section class="ba-dishes">
+				<div class="ba-dishes__menu">
+					<h2 class="ba-dishes__title">The Menu</h2>
+				</div>
+				<div class="ba-container">
+					<div class="ba-grid ba-grid-nopad">
+						<div class="ba-width-1-2">
+							<ul class="ba_dishes__list">
+								<li>
+									<div class="ba-list__line"><h3 class="ba-list__title">Voluptate cillum fugiat.</h3></div>
+									<h4 class="ba-list__text">Cheese, tomato, mushrooms, onions.</h4>
+									<span class="ba-list__price">$50</span>
+								</li>
+								<li>
+									<div class="ba-list__line"><h3 class="ba-list__title">Metus varius laoreet.</h3></div>
+									<h4 class="ba-list__text">Chicken, mozzarella cheese, onions.</h4>
+									<span class="ba-list__price">$62</span>
+								</li>
+								<li>
+									<div class="ba-list__line"><h3 class="ba-list__title">Donec sodales magna.</h3></div>
+									<h4 class="ba-list__text">Tuna, Sweetcorn, Cheese.</h4>
+									<span class="ba-list__price">$25</span>
+								</li>
+								<li>
+									<div class="ba-list__line"><h3 class="ba-list__title">Saugue velit cursus.</h3></div>
+									<h4 class="ba-list__text">Pineapple, Minced Beef, Cheese.</h4>
+									<span class="ba-list__price">$30</span>
+								</li>
+							</ul>
+						</div>
 
-	</footer>
-	<script src="js/main.js"></script>
-</body>
-</html>
+						<div class="ba-width-1-2">
+							<ul class="ba_dishes__list">
+								<li>
+									<div class="ba-list__line"><h3 class="ba-list__title">Arcu pede enim justo.</h3></div>
+									<h4 class="ba-list__text">Tuna, Sweetcorn, Cheese.</h4>
+									<span class="ba-list__price">$45</span>
+								</li>
+								<li>
+									<div class="ba-list__line"><h3 class="ba-list__title">Cras dapibussemper nisi.</h3></div>
+									<h4 class="ba-list__text">Pineapple, Minced Beef, Cheese.</h4>
+									<span class="ba-list__price">$32</span>
+								</li>
+								<li>
+									<div class="ba-list__line"><h3 class="ba-list__title">Quam semper libero.</h3></div>
+									<h4 class="ba-list__text">Cheese, tomato, mushrooms, onions.</h4>
+									<span class="ba-list__price">$15</span>
+								</li>
+								<li>
+									<div class="ba-list__line"><h3 class="ba-list__title">Nam eget dui Etiam.</h3></div>
+									<h4 class="ba-list__text">Chicken, mozzarella cheese, onions.</h4>
+									<span class="ba-list__price">$35</span>
+								</li>
+							</ul>
+
+						</div>
+					</div>
+					<a href="#" title="Load more" class="ba-dishes__load"><pre>load more &#124; &#709;</pre></a>
+
+				</div>
+
+			</section>
+			<div class="ba-container">
+				<section class="ba-featured">
+					<h2 class="ba-section__title">
+						Featured Dishes
+					</h2>
+						<a href="#" title="" class="ba-next__circle"></a>
+						<a href="#" title="" class="ba-next__circle"></a>
+						<a href="#" title="" class="ba-next__circle ba-next__circle--active"></a>
+						<a href="#" title="" class="ba-next__circle"></a>
+
+					<div class="ba-grid">
+						<div class="ba-width-1-4">
+							<a href="#" title="">
+								<img src="img/dishes/dish1.jpg" alt="">
+								<div class="ba-dishes__description">
+									<h3 class="ba-featured__title">
+										Fugiat nulla sint
+									</h3>
+									<h3 class="ba-featured__price">
+										$30
+									</h3>
+								</div>
+								<div class="ba-featured__rating">
+									<i>&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i>
+								</div>
+							</a>
+						</div>
+
+						<div class="ba-width-1-4">
+							<a href="#" title="">
+								<img src="img/dishes/dish2.jpg" alt="">
+								<div class="ba-dishes__description">
+									<h3 class="ba-featured__title">
+										Daute irure dolor
+									</h3>
+									<h3 class="ba-featured__price">
+										$24
+									</h3>
+								</div>
+								<div class="ba-featured__rating">
+									<i>&#9734;</i><i>&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i>
+								</div>
+							</a>
+						</div>
+
+						<div class="ba-width-1-4">
+							<a href="#" title="">
+								<img src="img/dishes/dish3.jpg" alt="">
+								<div class="ba-dishes__description">
+									<h3 class="ba-featured__title">
+										Officia deserunt mollit
+									</h3>
+									<h3 class="ba-featured__price">
+										$60
+									</h3>
+								</div>
+								<div class="ba-featured__rating">
+									<i class="active">&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i>
+								</div>
+							</a>
+						</div>
+
+						<div class="ba-width-1-4">
+							<a href="#" title="">
+								<img src="img/dishes/dish4.jpg" alt="">
+								<div class="ba-dishes__description">
+									<h3 class="ba-featured__title">
+										Pim minim veniam
+									</h3>
+									<h3 class="ba-featured__price">
+										$17
+									</h3>
+								</div>
+								<div class="ba-featured__rating">
+									<i>&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i><i class="active">&#9734;</i>
+								</div>
+							</a>
+						</div>
+					</div>
+
+				</section>
+				<div class="ba-gallery">
+					<h2 class="ba-section__title">
+						The Gallery
+					</h2>
+					<div class="ba-grid ba-grid-nopad">
+						<div class="ba-width-1-3">
+							<img src="img/gallery/gallery1.jpg" alt="">
+						</div>
+						<div class="ba-width-1-3">
+							<div class="ba-grid ba-grid-nopad">
+								<div class="ba-width-1-1">
+									<img src="img/gallery/gallery2.jpg" alt="">
+								</div>
+							</div>
+							<div class="ba-grid ba-grid-nopad">
+								<div class="ba-width-1-1">
+									<img src="img/gallery/gallery3.jpg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="ba-width-1-3">
+							<div class="ba-grid ba-grid-nopad">
+								<div class="ba-width-1-1">
+									<img src="img/gallery/gallery4.jpg" alt="">
+								</div>
+							</div>
+							<div class="ba-grid ba-grid-nopad">
+								<div class="ba-width-1-1">
+									<img src="img/gallery/gallery5.jpg" alt="">
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+
+		<footer class="ba-footer">
+			<div class="ba-container">
+				<div class="ba-grid">
+					<div class="ba-width-1-4">
+						<div class="ba-footer__restaurant">
+							<h3>New York Restaurant</h3>
+							<address>3926 Anmoore Road<br>
+								New York, NY 10014</address>
+								<a href="tel:7187491714" class="tel">718-749-1714</a>
+							</div>
+						</div>
+						<div class="ba-width-1-4">
+							<div class="ba-footer__restaurant">
+								<h3>France Restaurant</h3>
+								<address>68, rue  de la Couronne<br>
+									75002 PARIS</address>
+									<a href="tel:0294236956" class="tel">0294-236-956</a>
+								</div>
+							</div>
+							<div class="ba-width-1-4">
+								<ul class="ba-footer__links">
+									<li><a href="#" title="">Blog</a></li>
+									<li><a href="#" title="">Careers</a></li>
+									<li><a href="#" title="">Privacy Policy</a></li>
+									<li><a href="#" title="">Contact</a></li>
+								</ul>
+							</div>
+							<div class="ba-width-1-4">
+								<a href="" title="logo" class="ba-logo--white"><img src="img/logo_white.png" alt=""></a>
+								<p class="ba-footer__copyright">&#64; All Rights Reserved 2014.<br>
+									Find  More at Pixelhint.com</p>
+								</div>
+							</div>
+						</div>
+					</footer>
+					<script src="js/main.js"></script>
+				</body>
+				</html>
