--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<header class="ba-header cf">
 			<div class="ba-container">
 				<a href="#" class="ba-logo ba-float-left">
-					<img src="img/logo.png" alt="logo">
+					<img src="img/logo.png" height="29" width="81" alt="logo">
 				</a>
 				<nav class="ba-float-right">
 					<ul class="ba-menu">
