--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 							<div class="ba-width-1-4">
 								<a href="" title="logo" class="ba-logo--white"><img src="img/logo_white.png" alt=""></a>
 								<p class="ba-footer__copyright">&#64; All Rights Reserved 2014.<br>
-									Find  More at Pixelhint.com</p>
+									Find  More at <a href="#" title="">Pixelhint.com</a></p>
 								</div>
 							</div>
 						</div>
